CloudFormation/ansible.yml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  Features:
  v1:  
    - 1 vpn with 2 AZs, each with one private and public subnet
    - 1 ansible node in public subnet with external ssh access
    - 1 jenkins node in public subnet with only 8080 external access and internal ssh access
    - 1 server in private subnet and internal ssh access
    - 2 nat gateways in each public subnet
  v2:
    - Added a route53 internal DNS
    - Created parameters grouping and ordering
    
############################ PARAMETERS GROUP AND ORDER DEFINITION ############################    
Metadata: 
  AWS::CloudFormation::Interface: 
    ParameterGroups: 
      - 
        Label: 
          default: "Network Configuration"
        Parameters: 
          - CIDRVPC
          - CIDRPublicSubnet1
          - CIDRPublicSubnet2
          - CIDRPrivateSubnet1
          - CIDRPrivateSubnet2
          - InternalDomainName
      - 
        Label: 
          default: "SSH Keys"
        Parameters: 
          - AnsibleManagedNodesKey
          - AnsibleServerKey
      - 
        Label: 
          default: "Instance Types"
        Parameters: 
          - AnsibleServerInstanceType
          - JenkinsServerInstanceType

############################ PARAMETERS ############################  
Parameters:
  CIDRVPC:
    Description: >-
      CIDR for the VPC
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 10.0.0.0/16
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid CIDR range of the form x.x.x.x/x.
  CIDRPublicSubnet1:
    Description: >-
      CIDR for the Subnet1
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 10.0.1.0/24
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid CIDR range of the form x.x.x.x/x.
  CIDRPublicSubnet2:
    Description: >-
      CIDR for the Subnet2
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 10.0.2.0/24
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid CIDR range of the form x.x.x.x/x.
  CIDRPrivateSubnet1:
    Description: >-
      CIDR for the Subnet1
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 10.0.11.0/24
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid CIDR range of the form x.x.x.x/x.
  CIDRPrivateSubnet2:
    Description: >-
      CIDR for the Subnet2
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 10.0.12.0/24
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid CIDR range of the form x.x.x.x/x.
  InternalDomainName:
    Description: Internal private DNS domain name
    Type: String
    Description: Domain name for the private hosted zone (e.g., example.com)
    Default: dev.internal.company.com
  AnsibleServerKey:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the ansible instance
    Type: 'AWS::EC2::KeyPair::KeyName'
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
    Default: AnsibleKey
  AnsibleManagedNodesKey:
    Description: Name of an existing EC2 KeyPair to enable local SSH access to the instances managed by ansible
    Type: 'AWS::EC2::KeyPair::KeyName'
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
    Default: AnsibleManagedNodesKey
  JenkinsServerInstanceType:
    Description: JenkinsServer Server EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.medium
      - t2.xlarge
    ConstraintDescription: must be a valid EC2 instance type.
  AnsibleServerInstanceType:
    Description: AnsibleServer Server EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.medium
      - t2.xlarge
    ConstraintDescription: must be a valid EC2 instance type.


############################ MAPPINGS ############################ 
Mappings:
  AWSRegionArch2AMI: 
    eu-central-1: 
      AMI: ami-0aa74281da945b6b5
    eu-north-1: 
      AMI: ami-0b4ab8a966e0c2b21
    eu-west-1: 
      AMI: ami-07be51e3c6d5f61d2
    eu-west-2: 
      AMI: ami-08523e156d117cc29
    eu-west-3: 
      AMI: ami-0041b98fa770e38cd

Resources:
          
############################ NETWORK - VPC ############################ 
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: !Ref CIDRVPC
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: Public
          
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: Public
  GatewayToInternet:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
      
############################ NETWORK - DNS ############################ 

  PrivateHostedZone:
    Type: AWS::Route53::HostedZone
    Properties:
      Name: !Ref InternalDomainName
      VPCs:
        - VPCRegion: !Ref 'AWS::Region'
          VPCId: !Ref VPC

############################ PUBLIC ROUTE TABLES ############################  
 
  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: Public
  InternetRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: GatewayToInternet
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
#  VpcRoute:
#    Type: 'AWS::EC2::Route'
#    Properties:
#      RouteTableId: !Ref PublicRouteTable
#      DestinationCidrBlock: !Ref CIDRVPC
#      GatewayId: local
  
      
############################ PUBLIC NETWORKS ACLs ############################ 
  PublicNetworkAcl:
    Type: 'AWS::EC2::NetworkAcl'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: Public
  InboundHTTPPublicNetworkAclEntry:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: '100'
      Protocol: '6'
      RuleAction: allow
      Egress: 'false'
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: '8080'
        To: '8080'
  InboundDynamicPortPublicNetworkAclEntry:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: '101'
      Protocol: '6'
      RuleAction: allow
      Egress: 'false'
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: '32768'
        To: '65535'
  InboundSSHPublicNetworkAclEntry:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: '102'
      Protocol: '6'
      RuleAction: allow
      Egress: 'false'
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: '22'
        To: '22'
  InboundTrafficFromVpc:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: '103'
      Protocol: '6'
      RuleAction: allow
      Egress: 'false'
      CidrBlock: !Ref CIDRVPC
      PortRange:
        From: '0'
        To: '65535'
  OutboundPublicNetworkAclEntry:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: '100'
      Protocol: '6'
      RuleAction: allow
      Egress: 'true'
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: '0'
        To: '65535'
  PublicSubnetNetworkAclAssociation1:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet1
      NetworkAclId: !Ref PublicNetworkAcl
  PublicSubnetNetworkAclAssociation2:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet2
      NetworkAclId: !Ref PublicNetworkAcl
      
############################ PRIVATE NETWORKS ACLs ############################ 
  PrivateNetworkAcl:
    Type: 'AWS::EC2::NetworkAcl'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: Private
  InboundDynamicPortPrivateNetworkAclEntry:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId: !Ref PrivateNetworkAcl
      RuleNumber: '101'
      Protocol: '6'
      RuleAction: allow
      Egress: 'false'
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: '32768'
        To: '65535'
  InboundSSHPrivateNetworkAclEntry:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId: !Ref PrivateNetworkAcl
      RuleNumber: '102'
      Protocol: '6'
      RuleAction: allow
      Egress: 'false'
      CidrBlock: !Ref CIDRVPC
      PortRange:
        From: '22'
        To: '22'
  OutboundPrivateNetworkAclEntry:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId: !Ref PrivateNetworkAcl
      RuleNumber: '100'
      Protocol: '6'
      RuleAction: allow
      Egress: 'true'
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: '0'
        To: '65535'
  PrivateSubnetNetworkAclAssociation1:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId: !Ref PrivateSubnet1
      NetworkAclId: !Ref PrivateNetworkAcl
  PrivateSubnetNetworkAclAssociation2:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId: !Ref PrivateSubnet2
      NetworkAclId: !Ref PrivateNetworkAcl
      
############################ PUBLIC SUBNET - AZ1 ############################ 

  PublicSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref CIDRPublicSubnet1
      AvailabilityZone: !Select 
        - 0
        - !GetAZs ''
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: Public 
          
  NATGatewayAz1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt ElasticIPAz1.AllocationId
      SubnetId: !Ref PublicSubnet1
      
  ElasticIPAz1:
    Type: AWS::EC2::EIP
    
  PublicSubnetRouteTableAssociation1:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable
      
############################ PRIVATE SUBNET - AZ1 ############################

  PrivateSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref CIDRPrivateSubnet1
      AvailabilityZone: !Select 
        - 0
        - !GetAZs ''
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: Private
  PrivateSubnetRouteTableAssociation1:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable1
           
  PrivateRouteTable1:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: Private
#  VpcRoute1:
#    Type: 'AWS::EC2::Route'
#    DependsOn: GatewayToInternet
#    Properties:
#      RouteTableId: !Ref PrivateRouteTable1
#      DestinationCidrBlock: !Ref CIDRVPC
#      GatewayId: local
  NatGatewayRoute1:
    Type: 'AWS::EC2::Route'
    DependsOn: GatewayToInternet
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NATGatewayAz1   

############################ PUBLIC SUBNET - AZ2 ############################ 

  PublicSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref CIDRPublicSubnet2
      AvailabilityZone: !Select 
        - 1
        - !GetAZs ''
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: Public
  NATGatewayAz2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt ElasticIPAz2.AllocationId
      SubnetId: !Ref PublicSubnet2
      
  ElasticIPAz2:
    Type: AWS::EC2::EIP
  PublicSubnetRouteTableAssociation2:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

############################ PRIVATE SUBNET - AZ2 ############################ 

  PrivateSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref CIDRPrivateSubnet2
      AvailabilityZone: !Select 
        - 1
        - !GetAZs ''
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: Private
  PrivateSubnetRouteTableAssociation2:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable2

  PrivateRouteTable2:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: Private
#  VpcRoute2:
#    Type: 'AWS::EC2::Route'
#    DependsOn: GatewayToInternet
#    Properties:
#      RouteTableId: !Ref PrivateRouteTable2
#      DestinationCidrBlock: !Ref CIDRVPC
#      GatewayId: local
  NatGatewayRoute2:
    Type: 'AWS::EC2::Route'
    DependsOn: GatewayToInternet
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NATGatewayAz2   
      
 ############################ Jenkins INSTANCE ############################          
  JenkinsEC2Instance:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: !Ref JenkinsServerInstanceType
      NetworkInterfaces:
        - GroupSet:
            - !Ref JenkinsInstanceSecurityGroup
          AssociatePublicIpAddress: 'true'
          DeviceIndex: '0'
          DeleteOnTermination: 'true'
          SubnetId: !Ref PublicSubnet2
      KeyName: !Ref AnsibleManagedNodesKey
      ImageId: !FindInMap 
        - AWSRegionArch2AMI
        - !Ref 'AWS::Region'
        - AMI

  JenkinsInstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Enable SSH access via port 22 and http 8080
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '8080'
          ToPort: '8080'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref CIDRVPC

  JenkinsDnsRecordA:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneId: !Ref PrivateHostedZone
      Name:
        Fn::Sub:
          - "${InstanceName}${ExternalValue}"
          - InstanceName: "jenkins."
            ExternalValue: !Ref InternalDomainName
      Type: A
      TTL: 60
      ResourceRecords:
        - !GetAtt JenkinsEC2Instance.PrivateIp 
        
 ############################ ANSIBLE INSTANCE ############################          
  AnsibleEC2Instance:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: !Ref AnsibleServerInstanceType
      NetworkInterfaces:
        - GroupSet:
            - !Ref AnsibleInstanceSecurityGroup
          AssociatePublicIpAddress: 'true'
          DeviceIndex: '0'
          DeleteOnTermination: 'true'
          SubnetId: !Ref PublicSubnet1
      KeyName: !Ref AnsibleServerKey
      ImageId: !FindInMap 
        - AWSRegionArch2AMI
        - !Ref 'AWS::Region'
        - AMI
      UserData: 
        Fn::Base64: !Sub |
          #!/bin/bash -x
          amazon-linux-extras install -y ansible2

  AnsibleInstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0    

 ############################ Private INSTANCE ############################          
  PrivateEC2Instance:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: !Ref JenkinsServerInstanceType
      NetworkInterfaces:
        - GroupSet:
            - !Ref PrivateInstanceSecurityGroup
          AssociatePublicIpAddress: 'false'
          DeviceIndex: '0'
          DeleteOnTermination: 'true'
          SubnetId: !Ref PrivateSubnet1
      KeyName: !Ref AnsibleManagedNodesKey
      ImageId: !FindInMap 
        - AWSRegionArch2AMI
        - !Ref 'AWS::Region'
        - AMI
      PrivateDnsNameOptions:
        EnableResourceNameDnsAAAARecord: false
        EnableResourceNameDnsARecord: true
        HostnameType: resource-name

  PrivateInstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Enable SSH access via port 22 and http 8080
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref CIDRVPC    

  PrivateInstanceDnsRecordA:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneId: !Ref PrivateHostedZone
      Name:
        Fn::Sub:
          - "${InstanceName}${ExternalValue}"
          - InstanceName: "private.instance."
            ExternalValue: !Ref InternalDomainName
      Type: A
      TTL: 60
      ResourceRecords:
        - !GetAtt PrivateEC2Instance.PrivateIp
